# Neuraccel

./: CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE.MD  README.md  build.rs  superprompt.md
.github/workflows/: ci.yml  docker-build.yml  rust.yml
src/: lib.rs
src/gpu/: interface.rs
src/gpu/cuda/: ffi.rs  implementation.rs
src/gpu/opencl/: opencl.rs
src/kernels/: mod.rs
