[package]
name = "neuracl"
version = "0.1.0"
edition = "2021"

[features]
default = ["cuda"]
cuda = []
opencl = []

[dependencies]
cudnn = { git = "https://github.com/Rust-GPU/Rust-CUDA", package = "cudnn" }
blastoff = { git = "https://github.com/Rust-GPU/Rust-CUDA", package = "blastoff" }
cuda_std = { git = "https://github.com/Rust-GPU/Rust-CUDA", package = "cuda_std" }
cust = { git = "https://github.com/Rust-GPU/Rust-CUDA", package = "cust" }


[lib]
name = "neuracl"
path = "src/lib.rs"
